--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						
 						<section id="demoContent">
 							<h2>Demo</h2>
-							<p>All these demos are to scroll to top. The target in this case is the header. We reference the id - #header. Following are the three ways you can use the plugin.</p>
+							<p>All these demos are to scroll to top. The target in this case is the header. We reference the id - #header. Following are the 3 ways you can use the plugin.</p>
 							<ol>
 								<li>
 									<p><strong>Default</strong> - <a class="" href="#" onclick="$('#header').scrollToViewPort();return false;" >Click Here</a></p>
